infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  selector:
    app: echo-foo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  selector:
    app: echo-bar
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
---
